--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.1.14",
     "aos": "^2.3.4",
     "axios": "^1.6.0",
     "firebase": "^10.5.2",
@@ -21,9 +22,11 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.11.0",
+    "react-pdf": "^7.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "react-tabs": "^6.0.2",
+    "react-to-print": "^2.14.15",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.9.0"
   },
